# Application_web

./: .flaskenv  .gitignore  LICENSE.rst  MANIFEST.in  README-ADMIN.md  README-DEV.md  README.md  pyproject.toml  setup.cfg
flask_sqlalchemy_session/: __init__.py
flaskrpg/: __init__.py  auth.py  blog.py  db.py  profile.py
flaskrpg/static/js/: flaskrpg.js
flaskrpg/templates/: base.html  fullname_or_username.html  messages.html  navbar.html
flaskrpg/templates/auth/: register.html
flaskrpg/templates/blog/: index.html  update.html
flaskrpg/templates/profile/: view.html
sql/: schema-postgresql.sql
tests/: conftest.py  test_flaskrpg.py
wsgi/: flaskrpg.wsgi
