[metadata]
name = flaskrpg
version = 0.9.2
license = BSD-3-Clause
maintainer = Paul Gaborit
maintainer_email = paul.gaborit@mines-albi.fr
description = flaksrpg est l'application flaskr adapté pour PostgreSQL (et mapping via l'ORM)
long_description = file: README.md

[options]
packages = find:
include_package_data = true
install_requires =

    # pour développer l'application Web
    Flask

    # pour lire les fichier .env (ou .flaskenv) 
    python-dotenv

    # pour l'accès à la base de données via l'ORM (SQLAlchemy)
    psycopg2-binary
    sqlalchemy >= 1.4.0b1

    # pour lier Flask et SQLALCHEMY 
    # Flask-SQLAlchemy-Session
    # (en fait, on utilise une version locale patchée)

    # pour gérer le dépôts d'images dans la base de données
    Pillow
    
[options.extras_require]
test =
    # pour effectuer les tests de l'application
    pytest
    pytest-dotenv
    # pour mesurer le taux de couverture des tests
    coverage
build =
    # pour construire l'archive d'installation
    build
    
[tool:pytest]
testpaths = tests
env_files =
    .flaskenv
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True
source =
    flaskrpg
